feat: add QuickSort & Binary Search

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,14 +1,43 @@
-﻿# Ajout de l'exécutable de test.
-add_executable(run_tests test_sorting.cpp)
+﻿# test/CMakeLists.txt
 
-# 1. Le chemin vers Catch2 (dans le dossier test, catch.hpp' y est).
-target_include_directories(run_tests PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
-# 2. Le chemin vers les en-têtes de notre code (ex: sorting.h).
-target_include_directories(run_tests PUBLIC ${CMAKE_SOURCE_DIR}/src)
+# --- Configuration de Catch2 (pour FetchContent) ---
+# include(FetchContent)
+# FetchContent_Declare(...)
+# FetchContent_MakeAvailable(Catch2)
 
-# On doit lier (linker) l'exécutable de test avec notre librairie "sorting".
-target_link_libraries(run_tests PRIVATE sorting)
+# Activation explicite du support C++ 
+# Ceci est crucial car les fichiers de tests (.cpp) sont en C++.
+enable_language(CXX)
 
-# Ajout d'une commande pour lancer les tests automatiquement après la compilation.
+# --- Fichiers Sources C++ des Tests ---
+# Définition de la liste de tous les fichiers de test C++
+set(CORE_TEST_SOURCES 
+    test_sorting.cpp 
+    test_search.cpp
+)
+
+# --- Exécutable de Test ---
+# 1. Créer UN SEUL exécutable de test à partir de tous les fichiers C++
+# Le nom de cet exécutable est "run_core_tests"
+add_executable(run_core_tests ${CORE_TEST_SOURCES})
+
+# --- Chemins d'Inclusion (Headers) ---
+# 2. Indiquer où trouver les en-têtes de Catch2 (si vous avez catch.hpp dans test/)
+target_include_directories(run_core_tests PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+
+# 3. Indiquer où trouver les en-têtes de notre code source (sorting.h, search.h)
+target_include_directories(run_core_tests PUBLIC ${CMAKE_SOURCE_DIR}/src)
+
+# --- Lien des Librairies (Linker) ---
+# 4. Lier l'exécutable avec notre nouvelle librairie C "core_utils"
+target_link_libraries(run_core_tests PRIVATE core_utils) 
+
+# --- Ajouter une définition de préprocesseur --- 
+# 5. Fixe les erreurs sysconf/constexpr et 'non-constexpr' 
+target_compile_definitions(run_core_tests PRIVATE CATCH_CONFIG_DISABLE_FATAL_STD_LIBRARIES) 
+target_compile_definitions(run_core_tests PRIVATE CATCH_CONFIG_NO_POSIX_SIGNALS)
+
+# --- Configuration de l'Exécution des Tests ---
+# 6. Permettre à CMake de reconnaître et d'exécuter les tests
 enable_testing()
-add_test(NAME QuickSortTests COMMAND run_tests)
+add_test(NAME CoreTests COMMAND run_core_tests)
