--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,11 @@
-﻿# Créer une librairie à partir de notre code de tri.
-add_library(sorting src/sorting.c)
+﻿# Créer une librairie (que nous renommons "core_utils" pour refléter tri ET recherche)
+add_library(core_utils sorting.c search.c)
 
-# Définir l'emplacement des fichiers d'en-tête (headers) pour que d'autres puissent les utiliser.
-target_include_directories(sorting PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+# Définir l'emplacement des fichiers d'en-tête (headers) 
+target_include_directories(core_utils PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+
+# Créer l'exécutable final de notre application à partir de main.c
+add_executable(bank_app main.c) 
+
+# Lier l'exécutable avec notre librairie d'utilitaires (core_utils)
+target_link_libraries(bank_app PRIVATE core_utils) 
