--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,13 @@
 ﻿cmake_minimum_required(VERSION 3.10) 
 
 # Le nom de notre projet.
-project(BankApp C) 
+project(BankApp C CXX) 
 
 set(CMAKE_C_STANDARD 17)
 set(CMAKE_C_STANDARD_REQUIRED True)
+
+# --- Activation de CTest --- 
+enable_testing() 
 
 # Ajout du sous-répertoire 'src' (pour les sources de l'application) et 'test' (pour les tests).
 add_subdirectory(src)
