--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -17,6 +17,7 @@ set(CORE_TEST_SOURCES
     test_account.cpp
     test_transaction.cpp
     test_transfer.cpp
+    test_storage.cpp
 )
 
 # --- Exécutable de Test ---
@@ -37,6 +38,7 @@ target_link_libraries(run_core_tests PRIVATE core_utils
   account_lib
   transaction_lib
   system_lib
+  persistence_lib
 ) 
 
 # --- Ajouter une définition de préprocesseur --- 
